--- a/index.html
+++ b/index.html
@@ -328,8 +328,19 @@
     </div>
     <div class="shop-blocks">
         <div class="shop-block">
+            <div class="shop-image-block">
+            <picture>
+            <source media="(max-width: 640px)"
+                    srcset="images/shop-item-mobile1.jpg" class="shop-image" alt="куклы">
+            <source media="(min-width: 641px) and (max-width: 1200px)"
+                    srcset="images/shop-item-tablet1.jpg" class="shop-image" alt="куклы">
+            <source media="(min-width: 1201px)"
+                    srcset="images/shop-item-desk1.jpg" class="shop-image" alt="куклы">
             <img src="images/shop-item-desk1.jpg" class="shop-image" alt="Подушка">
+            </picture>
+                </div>
             <div class="shop-content">
+                <picture>
                 <div class="shop-line"><a class="shop-line-link" href="#0">подушки на диван</a></div>
                 <div>
                 <div class="shop-txt">Набор из двух подушек с модными принтами. Видео о создании <a class="shop-line-link" href="#0">здесь.</a></div>
@@ -343,6 +354,7 @@
                 </div>
             </div></div>
         <div class="shop-block">
+            <div class="shop-image-block">
             <picture>
                 <source media="(max-width: 640px)"
                         srcset="images/shop-item-mobilet2.jpg" class="shop-image" alt="куклы">
@@ -352,7 +364,7 @@
                         srcset="images/shop-item-desk2.jpg" class="shop-image" alt="куклы">
                 <img src="images/shop-item-desk2.jpg" class="shop-image" alt="Подушка">
             </picture>
-
+            </div>
             <div class="shop-content">
                 <div class="shop-line"><a class="shop-line-link" href="#0">Кукла «Зайчик»</a></div>
                 <div>
@@ -366,7 +378,17 @@
                 </div>
             </div></div>
         <div class="shop-block">
-            <img src="images/shop-item-desk3.jpg" class="shop-image" alt="зрители на шее">
+            <div class="shop-image-block">
+            <picture>
+            <source media="(max-width: 640px)"
+                    srcset="images/shop-item-mobilet3.jpg" class="shop-image" alt="куклы">
+            <source media="(min-width: 641px) and (max-width: 1200px)"
+                    srcset="images/shop-item-tablet3.jpg" class="shop-image" alt="куклы">
+            <source media="(min-width: 1201px)"
+                    srcset="images/shop-item-desk3.jpg" class="shop-image" alt="куклы">
+            <img src="images/shop-item-desk3.jpg" class="shop-image" alt="Подушка">
+            </picture>
+            </div>
             <div class="shop-content">
                 <div class="shop-line"><a class="shop-line-link" href="#0">Шестиугольная рамка</a></div>
                 <div>
