--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <title>Document</title>
 </head>
 
-<div class="popup popup-active">
+<div class="hidden">
+    <div class="popup">
     <div class="popup-container"><div class="x"></div>
     <div class="popup-content-containers">
         <div class="popup-title">Ваш фидбек</div>
@@ -50,6 +51,8 @@
         </div>
         <button type="submit" class="button">Отправить</button>
         </div>
+</div>
+    <div class="black"></div>
 </div>
 </div>
 <header class="head">
