--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
            <p class="popup-txt">Часто заходите на сайт?</p>
             <div>
             <select class="popup-select-interview-1">
-                <option selected>Никогда</option>
+                <option >Никогда</option>
                 <option selected>Почти каждый день</option>
                 <option>Плевать хотел</option>
                 <option>Это не я</option>
@@ -339,7 +339,7 @@
                             <li class="tags-list-item"><a class="tags-menu-link" href="#0">food</a></li>
                             <li class="tags-list-item"><a class="tags-menu-link" href="#0">heath</a></li>
                         </ul>
-            </section></section>
+            </section>
                     <!-- темы -->
         <section class="sidebar-block">
             <H2 class="sidebar-title">Темы</H2>
@@ -364,11 +364,11 @@
             <div class="shop-image-block">
             <picture>
             <source media="(max-width: 640px)"
-                    srcset="images/shop-item-mobile1.jpg" class="shop-image" alt="dolls">
+                    srcset="images/shop-item-mobile1.jpg" class="shop-image">
             <source media="(min-width: 641px) and (max-width: 1200px)"
-                    srcset="images/shop-item-tablet1.jpg" class="shop-image" alt="dolls">
+                    srcset="images/shop-item-tablet1.jpg" class="shop-image">
             <source media="(min-width: 1201px)"
-                    srcset="images/shop-item-desk1.jpg" class="shop-image" alt="dolls">
+                    srcset="images/shop-item-desk1.jpg" class="shop-image">
             <img src="images/shop-item-desk1.jpg" class="shop-image" alt="Подушка">
             </picture>
                 </div>
@@ -382,18 +382,18 @@
                         <div class="shop-old-price">1000 ₽</div>
                         <div class="shop-price-actual">800 ₽</div>
                         </div>
-                <button type="submit" class="shop-button button" href="#0">В магазин</button>
+                <button type="submit" class="shop-button button">В магазин</button>
                 </div>
             </div></div>
         <div class="shop-block">
             <div class="shop-image-block">
             <picture>
                 <source media="(max-width: 640px)"
-                        srcset="images/shop-item-mobilet2.jpg" class="shop-image" alt="куклы">
+                        srcset="images/shop-item-mobilet2.jpg" class="shop-image">
                 <source media="(min-width: 641px) and (max-width: 1200px)"
-                        srcset="images/shop-item-tablet2.jpg" class="shop-image" alt="куклы">
+                        srcset="images/shop-item-tablet2.jpg" class="shop-image">
                 <source media="(min-width: 1201px)"
-                        srcset="images/shop-item-desk2.jpg" class="shop-image" alt="куклы">
+                        srcset="images/shop-item-desk2.jpg" class="shop-image">
                 <img src="images/shop-item-desk2.jpg" class="shop-image" alt="Подушка">
             </picture>
             </div>
@@ -406,18 +406,18 @@
                     <div class="shop_price">
                         <div class="shop-price-actual">3500 ₽</div>
                     </div>
-                    <button type="submit" class="shop-button button" href="#0">В магазин</button>
+                    <button type="submit" class="shop-button button">В магазин</button>
                 </div>
             </div></div>
         <div class="shop-block">
             <div class="shop-image-block">
             <picture>
             <source media="(max-width: 640px)"
-                    srcset="images/shop-item-mobilet3.jpg" class="shop-image" alt="куклы">
+                    srcset="images/shop-item-mobilet3.jpg" class="shop-image">
             <source media="(min-width: 641px) and (max-width: 1200px)"
-                    srcset="images/shop-item-tablet3.jpg" class="shop-image" alt="куклы">
+                    srcset="images/shop-item-tablet3.jpg" class="shop-image">
             <source media="(min-width: 1201px)"
-                    srcset="images/shop-item-desk3.jpg" class="shop-image" alt="куклы">
+                    srcset="images/shop-item-desk3.jpg" class="shop-image">
             <img src="images/shop-item-desk3.jpg" class="shop-image" alt="Подушка">
             </picture>
             </div>
@@ -431,7 +431,7 @@
                         <div class="shop-old-price">500 ₽</div>
                         <div class="shop-price-actual">400 ₽</div>
                     </div>
-                    <button type="submit" class="shop-button button" href="#0">В магазин</button>
+                    <button type="submit" class="shop-button button">В магазин</button>
                 </div>
             </div></div>
 
