--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
 <!doctype html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="ru" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport">
+
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>doc</title>
+    <title>diploma</title>
 </head>
 <body>
-<head>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
 
 <div class="hidden">
     <div class="popup">
