--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="UTF-8">
-    <meta name="viewport">
+    <meta name="viewport" content="width=device-width">
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>diploma</title>
@@ -50,7 +50,7 @@
 </div>
 </div>
 <header class="head">
-    <div class="menu-container">
+    <div class="container">
         <div class="header_top">
             <a href="#0"><img src="svg/noemi-logo.svg" class="header-logo" alt="логотип"></a>
             <nav class="menu">
