--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <div class="hidden">
     <div class="popup">
-    <div class="popup-container"><div class="x"></div>
+    <div class="popup-container"><div class="popup-bottom-close"></div>
     <div class="popup-content-containers">
         <div class="popup-title">Ваш фидбек</div>
         <div class="popup-container-interview-1">
-           <p class="popup-txt">Часто заходите на сайт?</p>
+           <p lable="popup-txt">Часто заходите на сайт?</p>
             <div>
             <select class="popup-select-interview-1">
                 <option >Никогда</option>
@@ -27,7 +27,7 @@
             </div>
     </div>
         <div class="popup-container-interview-2, block-content">
-            <p class="popup-txt">Вы подписаны на e-mail рассылку?</p>
+            <p lable="popup-txt">Вы подписаны на e-mail рассылку?</p>
                 <div class="radio-group">
                     <label class="interviewChoice1"><input type="radio" class="radio" name="interview">
                         <span class="radio-group-text">да</span></label>
@@ -36,7 +36,7 @@
                 </div>
         </div>
         <div class="popup-container-interview-3, block-content">
-            <p class="popup-txt">Расскажите, какой контент вы хотели бы видеть на нашем сайте?</p>
+            <p lable="popup-txt">Расскажите, какой контент вы хотели бы видеть на нашем сайте?</p>
             <form>
                 <div class="form-row"><label class="mail-label">
                         <span class="visual-hidden">Введите адрес</span>
