--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="hidden">
     <form class="popup">
     <div class="popup-container">
-        <div class="popup-bottom-close"></div>
+        <bottom class="popup-bottom-close"></bottom>
     <div class="popup-content-containers">
         <div class="popup-title">Ваш фидбек</div>
         <div class="popup-container-interview-1">
@@ -27,7 +27,7 @@
             </select>
             </div>
     </div>
-        <div class="popup-container-interview-2, block-content">
+        <div class="popup-container-interview-2 block-content">
             <p><label for="popup-02">Вы подписаны на e-mail рассылку?</label></p>
                 <div class="radio-group" for="popup-02">
                     <label class="interviewChoice1"><input type="radio" id="popup-02"  class="radio" name="interview">
